name:                expri
version:             0.1.0.0
synopsis:            Small REPL
description:         Primitive REPL with C-like syntax  
license:             MIT
author:              Denis Zharkov
maintainer:          sidrat.kvadrat@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable expri
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:       
       base
       , array
       , containers
       , process
       , directory
       , split
       , transformers
       , mtl
       , pretty
       , readline
       , lens 

  ghc-options: -Wall -O2
